assets/site/program.scss
---
---
@charset "utf-8";
@import "base", "festival";

body.has-hero {
    > main {
        margin-top: 0;
        h1 {
            margin-top: 1rem;
            position: relative;
            z-index: 1;
            @include hero-text;

            a {
                color: #{$background-color}d0;
                &:hover {
                    color: $background-color;
                }
            }
        }
    }
}
#hero {
    height: $hero-height;
    > .text {
        @include backdrop-filter(blur(1px));
        position: absolute;
        bottom: 0;
        left: 0;
        z-index: 10;
        width: 100%;
    }
}

h3 .label {
    font-weight: 400;
}

#header {
    h2, h3 {
        margin-top: 1rem;
    }
    @include breakpoint(tiny) {
        span {
            display: inline-block;
        }
    }

    h3 a {
        text-decoration: none;
    }
}
#header.sidebar {
    gap: 2em;
    h3 {
        margin-top: 0;
    }
    @include breakpoint(min-desktop) {
        > *:first-child {
            width: $sidebar-width;
            float: right;
            margin-left: $sidebar-margin-left;
            margin-bottom: 3rem;
        }
        > *:first-child:where(body.piano *, body.piano-zh *) {
            width: 32vw;
        }

    }
    @include breakpoint(mid-desktop) {
        > *:first-child {
            width: $sidebar-width;
        }
    }
    @include breakpoint(tablet) {
        display: flex;
        flex-direction: column-reverse;
        gap: 0;
        > *:first-child {
            display: flex;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 1rem;
            @include breakpoint(tiny) {
                flex-direction: column;
                align-items: unset;
                gap: 1rem;
            }
            h3 {
                margin-bottom: 0;
            }
        }
        .apply {
            text-align: center;
            height: 100%;
        }
    }
}

body.piano-teaching, body.piano-teaching-zh {
    section:first-of-type {
        padding-bottom: 3rem;
        @include breakpoint(tablet) {
            display: flex;
            flex-direction: column;

            .highlight-box:nth-child(2) {
                order: 3;
            }
            .highlight-box:nth-child(3) {
                order: 4;
            }
        }
    }
}

#faculty {
    background-color: white;
    padding: 3rem 0;
    h2 {
        text-align: center;
        margin-top: 0;
        margin-bottom: 2rem;
    }

    .zh-name {
        display: block;
    }
}

#video {
    padding: 3rem max-minimum-side-padding(5vw);
    @include breakpoint(mobile) {
        padding: 2rem max-minimum-mobile-side-padding(5vw);
    }
    background: linear-gradient(to top right, transparent, #{$brand-light-blue}),
        linear-gradient(to top left, transparent 20%, #{$brand-light-yellow}),
        linear-gradient(to bottom, transparent, #{$brand-blue});
    background-blend-mode: overlay;
    iframe {
        width: 100%;
        aspect-ratio: 16/9;
    }
}

section .image-container {
    margin-block-start: 1em;
    margin-block-end: 1em;
    img {
        border-radius: $border-radius-large;
        display: block;

        width: $default-max-copy-width;
        margin-left: $standard-block-margin-left;
        @include breakpoint(mobile) {
            width: 100%;
            margin-left: 0;
        }
    }
}

body.piano main { // used to be main:has(#learn) (see #60)
    margin-bottom: 0;
}
section#learn {
    text-align: center;
    font-size: 1.5rem;
    @include breakpoint(mobile) {
        font-size: 1.25rem;
    }
    display: flex;
    gap: 3rem;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 6rem;
    padding-bottom: 6rem;
    h3 {
        margin: 0;
        font-size: 1em;
        padding: 1.2em;
        background: linear-gradient(to bottom, #FAD170DD, #{$brand-light-yellow}DD);
        @include backdrop-filter(blur(3px));
        border-radius: $border-radius-large;
    }
}


section#splash-piano {
    clear: both;
    h2 {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
    padding-bottom: 3rem;

    background: linear-gradient(to bottom right, transparent 50%, #4ED4C6),
        linear-gradient(to bottom left, transparent 50%, #6EC1D4),
        linear-gradient(to bottom, transparent, #03a597);
    background-blend-mode: screen;
    padding-top: 2rem;
    padding-bottom: 4rem;
    h2 {
        color: $body-color;
        text-align: center;
        padding: 0 2rem;
        font-size: 2em;
        @include breakpoint(mobile) {
            padding: 0;
            font-size: 1.8em;
        }
    }
    .image-copy {
        display: flex;
        gap: 2rem;
        padding-top: 2rem;
        @include breakpoint(mobile) {
            flex-direction: column;
        }

        &.image-copy:nth-child(even):not(.row) {
            flex-direction: row-reverse;
            @include breakpoint(mobile) {
                flex-direction: column;
            }
        }
    }
    .image {
        width: 60%;
        @include breakpoint(mobile) {
            width: min(100%, 450px);
            margin-left: auto;
            margin-right: auto;
        }
        img {
            display: block;
            width: 100%;
            height: 100%;
            object-fit: cover;
            border-radius: $border-radius-large;
        }
    }
    .copy {
        width: 40%;
        padding: 2rem;
        font-size: 1.5em;
        @include breakpoint(tablet) {
            font-size: 1.4em;
        }
        @include breakpoint(mobile) {
            width: 100%;
            padding: 1rem 0;
        }
        font-family: $brand-font;
        display: flex;
        align-items: center;
        line-height: $minimum-line-height;
        //background-color: $brand-blue;
        //color: $background-color;
    }
}

